--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,37 @@
       <artifactId>hoopluz-common-domain</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
-
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
+  <distributionManagement>
+    <repository>
+      <id>hoopluz-nexus</id>
+      <url>https://nexus.hoopluz.com/releases</url>
+    </repository>
+
+    <snapshotRepository>
+      <id>hoopluz-nexus</id>
+      <name>Nexus Snapshot Repository</name>
+      <url>https://nexus.hoopluz.com/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 
 </project>
