--- a/pom.xml
+++ b/pom.xml
@@ -103,10 +103,18 @@
     </plugins>
   </build>
 
+  <repositories>
+    <repository>
+      <id>nexus</id>
+      <name>nexus</name>
+      <url>https://nexus.hoopluz.com/repository/snapshot/</url>
+    </repository>
+  </repositories>
+
   <distributionManagement>
     <repository>
       <id>hoopluz-nexus</id>
-      <url>https://nexus.hoopluz.com/releases</url>
+      <url>https://nexus.hoopluz.com/releases/</url>
     </repository>
 
     <snapshotRepository>
