--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.11</version>
+    <version>2.7.10</version>
   </parent>
 
   <properties>
@@ -19,7 +19,7 @@
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <lombok.version>1.18.26</lombok.version>
-    <auth0.version>4.3.0</auth0.version>
+    <auth0.version>4.4.0</auth0.version>
     <javax.ws.rs.version>2.1.1</javax.ws.rs.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -31,6 +31,7 @@
         <artifactId>javax.ws.rs-api</artifactId>
         <version>${javax.ws.rs.version}</version>
       </dependency>
+
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
@@ -71,12 +72,6 @@
       <artifactId>lombok</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.12.0</version>
-    </dependency>
-
   </dependencies>
 
   <build>
@@ -104,9 +99,21 @@
 
   <repositories>
     <repository>
-      <id>nexus</id>
-      <name>nexus</name>
-      <url>https://nexus.hoopluz.com/repository/snapshot/</url>
+      <id>nexus-releases</id>
+      <name>nexus-releases</name>
+      <url>https://nexus.hoopluz.com/repository/releases/</url>
+    </repository>
+
+    <repository>
+      <id>nexus-snapshots</id>
+      <name>nexus-snapshots</name>
+      <url>https://nexus.hoopluz.com/repository/snapshots/</url>
+    </repository>
+
+    <repository>
+      <id>aliyunmaven</id>
+      <name>aliyun</name>
+      <url>https://maven.aliyun.com/repository/public/</url>
     </repository>
   </repositories>
 
