--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>hoopluz-web-security-starter</artifactId>
-  <version>1.0.6-SNAPSHOT</version>
+  <version>1.0.6</version>
 
   <parent>
     <groupId>com.hoopluz</groupId>
